--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
       "@/styles/*": ["styles/*"],
       "@/product/*": ["product/*"],
       "@/components/*": ["components/*"],
+      "@/*": ["./src/*"]
     },
     "lib": [
       "dom",
